Add page for banana banana bread

--- a/recipes/beercanchicken.html
+++ b/recipes/beercanchicken.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Beer Can Chicken</h1>
-    <img src="../images/chicken.jpg" alt="Roasted chicken">
+    <img src="../images/chicken.jpg" alt="Roasted chicken" width="500">
 
 </body>
 </html>
