--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
         <li><a href="/recipes/lasagna.html">Lasagna</a></li>
         <li><a href="/recipes/beercanchicken.html">Beer Can Chicken</a></li>
+        <li><a href="/recipes/bananabread.html">Banana Bread</a></li>
     </ul>
 </body>
 </html>
