Add ingredients list for beer can chicken

--- a/recipes/beercanchicken.html
+++ b/recipes/beercanchicken.html
@@ -7,6 +7,20 @@
 <body>
     <h1>Beer Can Chicken</h1>
     <img src="../images/chicken.jpg" alt="Roasted chicken" width="500">
-
+    <h2>Description</h2>
+    <p>This recipe for beer can chicken will yield four delicious servings.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 whole chicken</li>
+        <li>2 tablespoons extra virgin olive oil</li>
+        <li>1 12-ounce can of beer, room temperature, opened, half-full</li>
+        <li>1 tablespoon kosher salt</li>
+        <li>2 tablespoons chopped fresh thyme leaves</li>
+        <li>1 tablespoon black pepper</li>
+    </ul>
+    <h3>Directions</h3>
+    <ol>
+        <li></li>
+    </ol>
 </body>
 </html>
