Add cooking directions to beer can chicken recipe.

--- a/recipes/beercanchicken.html
+++ b/recipes/beercanchicken.html
@@ -20,7 +20,17 @@
     </ul>
     <h3>Directions</h3>
     <ol>
-        <li></li>
+        <li>Heat up half of the grill</li>
+        <li>Remove neck and giblets from cavity of chicken. Mix salt, pepper, and thyme, and rub all over chicken along 
+            with olive oil.</li>
+        <li>Lower the chicken onto the beer cah so the chicken is sitting upright with the can inside.</li>
+        <li>Place the chicken on the cool side of the grill. Use the legs and beer can as a tripod to support the
+            chicken. Cover the grill and leave it for at least half an hour. Check every 15 minutes thereafter. Cook
+            until the internal temperature of the thickest part of the thigh reaches 165 degrees F.
+        </li>
+        <li>Transfer the chicken to a tray and let rest for 10 minutes. Be careful when removing the can as it will
+            still be hot, and full.
+        </li>
     </ol>
 </body>
 </html>
