--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -2,56 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lasagna</title>
+    <title>Banana Bread</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
-    <img src="../images/lasagna.jpg" alt="A slice of lasagna on a plate" width="500">
+    <h1>Banana Bread</h1>
+    <img src="../images/bananabread.jpg" alt="Slices of banana bread on a plate" width="500">
     <h2>Description</h2>
-    <p>This recipe for lasagna will yield 12 delicious servings.</p>
+    <p>This recipe for banana bread will yield 12 delicious servings.</p>
     <h3>Ingredients</h3>
     <ul>
-        <li>1 pound sweet Italian sausage</li>
-        <li>3/4 pound lean ground beef</li>
-        <li>1/2 cup minced onion</li>
-        <li>2 cloves garlic, crushed</li>
-        <li>1 (28 ounce) can crushed tomatoes</li>
-        <li>2 (6 ounce) cans tomato paste</li>
-        <li>2 (6.5 ounce) cans tomato sauce</li>
-        <li>1/2 cup water</li>
-        <li>2 tablespoons white sugar</li>
-        <li>1 1/2 teaspoons dried basil leaves</li>
-        <li>1/2 teaspoon fennel seeds</li>
-        <li>1 teaspoon Italian seasoning</li>
-        <li>1 1/2 teaspoons salt</li>
-        <li>1/4 teaspoon black pepper</li>
-        <li>4 tablespoons chopped fresh parsley</li>
-        <li>12 lasagna noodles</li>
-        <li>16 ounces ricotta cheese</li>
-        <li>1 egg</li>
-        <li>3/4 pound mozzarella cheese, sliced</li>
-        <li>3/4 cup grated Parmesan cheese</li>
+        <li>2 cups all-purpose flour</li>
+        <li>1 teaspoon baking soda</li>
+        <li>1/4 teaspoon salt</li>
+        <li>1/2 cup butter
+        <li>3/4 cup brown sugar</li>
+        <li>2 eggs, beaten</li>
+        <li>2 1/3 cups mashed overripe bananas</li>
     </ul>
     <h3>Directions</h3>
     <ol>
-        <li>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned. Stir in 
-            crushed tomatoes, tomato paste, tomato sauce, and water. Season with sugar, basil, fennel seeds, Italian
-            seasoning, 1 teaspoon salt, pepper, and 2 tablespoons parsley. Simmer, covered,for about 1 1/2 hours, 
-            stirring occasionally.
+        <li>Preheat oven to 350 degrees F (175 degrees C). Lightly grease a 9x5 inch loaf pan.</li>
+        <li>In a large bowl, combine flour, baking soda and salt. In a separate bowl, cream together butter and brown
+            sugar. Stir in eggs and mashed bananas until well blended. Stir banana mixture into flour mixture; stir just
+            to moisten. Pour batter into prepared loaf pan.
         </li>
-        <li>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10
-            minutes. Drain noodles, and rinse with cold water. In a mixing bowl. combine ricotta cheese with egg,
-            remaining parsley, and 1/2 teaspoon salt.
-        </li>
-        <li>Preheat oven to 375 degrees F (190 degrees C)</li>
-        <li>To assemble, spread 1 1/2 cups of meat sauce in the bottom of a 9x13-inch baking dish. Arrange 6 noodles
-            lengthwise over meat sauce. Spread with one half of the ricotta cheese mixture. Top with a third of
-            mozzarella cheese slices. Spoon 1 1/2 cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan
-            cheese. Repeat layers, and top with remaining mozzarella and Parmesan cheese. Cover with foil: to prevent 
-            sticking, either spray foil with cooking spray, or make sure the foil does not touch the cheese.
-        </li>
-        <li>Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes. Cool for 15 minutes
-            before serving.
+        <li>Bake in preheated oven for 60 to 65 minutes, until a toothpick inserted into center of the load comes out
+            clean. Let bread cool in pan for 10 minutes, then turn out onto a wire rack.
         </li>
     </ol>
 </body>
